--- a/ZMCKitSample/app/src/main/res/layout/activity_custom_layout.xml
+++ b/ZMCKitSample/app/src/main/res/layout/activity_custom_layout.xml
@@ -5,18 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".CustomCameraActivity">
 
-    <!-- Custom Camera Button at the Top -->
-    <Button
-        android:id="@+id/customCameraButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="Custom Camera"
-        app:layout_constraintTop_toTopOf="parent"
+    <!-- Camera Container -->
+    <FrameLayout
+        android:id="@+id/cameraContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@id/showProductButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Product Button -->
     <Button
